--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
+    "@nestjs/testing": "^11.1.5",
     "@types/node": "^24.2.0",
     "prisma": "^6.13.0",
     "tsx": "^4.20.3",
